ICC - vLLM/final/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: litellm-ingress
  namespace: inf-vllm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: llm.inf.haw-hamburg.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: litellm
                port:
                  number: 4000
  tls:
    - secretName: llm-secret
      hosts:
        - llm.inf.haw-hamburg.de
